--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -49,8 +49,9 @@
     "map.sym": {
         "First Point": "Lähtökohta",
         "Last Point": "Saapumispaikka",
-        "Fishing Hot Spot Facility": "{{night}} majassa",
-        "Campground": "{{night}} teltassa"
+        "Fishing Hot Spot Facility": "{{night}} autiotupassa",
+        "Campground": "{{night}} teltassa",
+        "Residence": "{{night}} hostellissa"
     },
     "map.stats": "Tilastot:",
     "map.stats.total-length": "Kokonaispituus:",
@@ -63,12 +64,9 @@
     "map.stats.loss": "Tappio:",
     "map.stats.source": "Tietolähde:",
     "map.stats.source.pos": "Asema:",
-    "single-band": "yksikaistainen",
     "multi-band": "monikaistainen",
-    "single-gnss": "Vain GPS",
     "multi-gnss": "moni GNSS",
     "waas-egnos-enabled": "WAAS/EGNOS:n kanssa",
-    "waas-egnos-disabled": "ilman WAAS/EGNOS",
     "topo-maps": "Maastokartta",
     "map.stats.chart.ele.label": "{{elevation}} (m)",
     "map.stats.chart.ele.tooltip": "{{elevation}}:",
