refactor *about* links

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,7 @@
     "about.me.title": "About Me",
     "about.me": "My name is Clement. I take photos of the untouched nature and notes of my adventures. I found myself in the middle of nowhere, fighting the elements and crash testing my resiliency. I hitchhiked more than 40,000 km and spent hundreds days through deserts, roads, rainforests, villages, lifestyles. You can consider me as adventurer, engineer, wilderness and human explorer. But I am not gifted and you can do the same, chase your dreams! We all need a purpose in life. Mine is to live my greatest dreams in the simplest possible way, and share them. In my sedentary life, I like building technical things. Indeed, I made this website from scratch. Enjoy your visit in my digital garden!",
     "about.pledge": "Photography is my exploration tool in a way to widen our horizon toward remote wilderness. I prove with photos that the most beautiful things are natural. But photos do not keep snow on tops, native forests, wildlife, crystal clear rivers, pure mountain lakes. It's up to us to think and act sustainably so that beauty is beyond all and nature perpetual.",
-    "contact.title": "Contact",
+    "contact.title": "Contact & Links",
     "contact.why": "Please give me feedback, share your thoughts and projects, tell me more about you.",
     "mailto": "Email",
     "rss-feed": "RSS Feed",
@@ -18,7 +18,7 @@
     "download": "Download",
     "download.signature": "Signature",
     "font": "Font",
-    "social-networks": "Social Networks",
+    "social-networks": "Get news and find out more on social platforms as well as other feeds.",
     "cancel": "Cancel",
     "close": "Close",
     "next.tooltip": "Next",
@@ -159,11 +159,12 @@
     "cam.goto": "Locate with:",
     "first": "first",
     "last": "last",
-    "donate": "Donate",
-    "donate-zcash": "{{donate}} with Zcash",
-    "donate-monero": "{{donate}} with Monero",
-    "donate-nano": "{{donate}} with Nano",
-    "donate-kofi": "One-time donation with card on Ko-fi",
+    "donate": "Donate & Shop",
+    "donate.why": "If you like my photos, stories, and interactive maps, please consider donating.",
+    "donate-zcash": "Donate with Zcash",
+    "donate-monero": "Donate with Monero",
+    "donate-nano": "Donate with Nano",
+    "donate-kofi": "One-time donation and shop on Ko-fi",
     "copy": "Copy address to clipboard",
     "copied": "Address copied to clipboard",
     "can-order-print": "Fine art print",
