--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -4,7 +4,7 @@
     "about.me.title": "Minusta",
     "about.me": "Nimeni on Clement. Otan valokuvia koskemattomasta luonnosta ja muistiinpanoja seikkailuistani. Löysin itseni keskeltä ei-mitään, taistelemassa elementtejä vastaan ja törmäystesteissä kestävyyttäni. Liftasin yli 40 000 kilometriä ja vietin satoja päiviä läpi aavikoiden, teiden, sademetsien, kylien ja elämäntapojen. Minua voi pitää seikkailijana, insinöörinä, erämaan ja ihmisen tutkimusmatkailijana. Mutta en ole lahjakas, ja sinä voit tehdä samoin, jahdata unelmiasi! Me kaikki tarvitsemme tarkoituksen elämässä. Minun tarkoitukseni on elää suurimpia unelmiani mahdollisimman yksinkertaisella tavalla ja jakaa ne. Istuvassa elämässäni pidän teknisten asioiden rakentamisesta. Itse asiassa tein tämän verkkosivuston tyhjästä. Nauti vierailustasi digitaalisessa puutarhassani!",
     "about.pledge": "Valokuvaus on minun tutkimustyökaluni tavalla, joka laajentaa horisonttiamme kohti syrjäistä erämaata. Todistan valokuvilla, että kauneimmat asiat ovat luonnollisia. Mutta valokuvat eivät pidä lunta huipuilla, alkuperäisiä metsiä, villieläimiä, kristallinkirkkaita jokia, puhtaita vuoristojärviä. Meidän tehtävämme on ajatella ja toimia kestävästi niin, että kauneus on yli kaiken ja luonto ikuinen.",
-    "contact.title": "Yhteystiedot",
+    "contact.title": "Yhteystiedot & linkit",
     "contact.why": "Anna minulle palautetta, jaa ajatuksiasi ja projektejasi, kerro lisää itsestäsi.",
     "mailto": "Sähköpostiosoite",
     "rss-feed": "RSS-syöte",
@@ -18,7 +18,7 @@
     "download": "Lataa",
     "download.signature": "Allekirjoitus",
     "font": "Fontti",
-    "social-networks": "Sosiaaliset verkostot",
+    "social-networks": "Saat uutisia ja lisätietoja sosiaalisista alustoista sekä muista syötteistä.",
     "cancel": "Peruuta",
     "close": "Sulje",
     "next.tooltip": "Seuraava",
@@ -159,11 +159,12 @@
     "cam.goto": "Paikana:",
     "first": "ensimmäinen",
     "last": "viimeinen",
-    "donate": "Lahjoita",
-    "donate-zcash": "{{donate}} Zcashilla",
-    "donate-monero": "{{donate}} Moneron avulla",
-    "donate-nano": "{{donate}} Nanon kanssa",
-    "donate-kofi": "Kertaluonteinen lahjoitus kortilla Ko-fi -alustalla",
+    "donate": "Lahjoitaa & ostaa",
+    "donate.why": "Jos pidät kuvistani, tarinoistani ja kartoistani, harkitse lahjoittamista.",
+    "donate-zcash": "Lahjoita Zcashilla",
+    "donate-monero": "Lahjoita Moneron avulla",
+    "donate-nano": "Lahjoita Nanon kanssa",
+    "donate-kofi": "Kertaluonteinen lahjoitus ja ostokset Ko-fi-sivustolla",
     "copy": "Kopioi osoite leikepöydälle",
     "copied": "Osoite kopioitu leikepöydälle",
     "can-order-print": "Kuvataidepainatus",
