--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -4,7 +4,7 @@
     "about.me.title": "À propos de moi",
     "about.me": "Yo, c'est Clément. Je prends des photos de la nature sauvage et des notes de mes aventures. Je me suis retrouvé au milieu de nulle part, à lutter contre les éléments et à tester ma résilience. J'ai fait plus de 40 000 km en auto-stop et passé des centaines de jours à travers les déserts, les routes, les forêts tropicales, les villages, les modes de vie. Considères-moi comme un aventurier, un ingénieur, un explorateur de la nature sauvage et de la nature humaine. Mais je ne suis pas un surdoué et tu peux en faire autant, même mieux, chasses tes rêves ! Nous avons tous besoin d'un but. Le mien est de vivre mes plus grands rêves le plus simplement possible, et de les partager. Dans ma vie sédentaire, j'ai des projets techniques. J'ai réalisé ce site web de zéro. Bonne visite dans mon jardin numérique !",
     "about.pledge": "La photographie est mon outil d'exploration en vue d'élargir notre horizon vers des contrées éloignées. Je prouve avec des photos que les plus belles choses sont naturelles. Mais mes photos ne gardent pas la neige sur les sommets, les forêts primaires, la vie indigène, les rivières cristallines, la pureté des les lacs de montagne. C'est à nous de penser et d'agir durablement pour que la beauté soit au-delà de tout et la nature perpétuelle.",
-    "contact.title": "Me contacter",
+    "contact.title": "Contact & liens",
     "contact.why": "Fais-moi part de tes réactions, partage tes réflexions et tes projets, dis-m'en plus sur toi.",
     "mailto": "Couriel",
     "rss-feed": "Flux RSS",
@@ -18,7 +18,7 @@
     "download": "Télécharger",
     "download.signature": "Signature",
     "font": "Police",
-    "social-networks": "Réseaux sociaux",
+    "social-networks": "Je suis également sur les plateformes sociales ainsi que sur d'autres flux d'informations.",
     "cancel": "Annuler",
     "close": "Fermer",
     "next.tooltip": "Suivant",
@@ -159,11 +159,12 @@
     "cam.goto": "Localiser avec :",
     "first": "première",
     "last": "dernière",
-    "donate": "Faire un don",
-    "donate-zcash": "{{donate}} en Zcash",
-    "donate-monero": "{{donate}} en Monero",
-    "donate-nano": "{{donate}} en Nano",
-    "donate-kofi": "Don unique par carte avec Ko-fi",
+    "donate": "Don & boutique",
+    "donate.why": "Si vous aimez mes photos, récits et cartes interactives, n'hésitez pas à faire un don.",
+    "donate-zcash": "Faire un don en Zcash",
+    "donate-monero": "Faire un don en Monero",
+    "donate-nano": "Faire un don en Nano",
+    "donate-kofi": "Don unique et boutique sur Ko-fi",
     "copy": "Copier l'adresse dans le presse-papiers",
     "copied": "Adresse copiée dans le presse-papiers",
     "can-order-print": "Tirage d'art",
