--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -168,5 +168,10 @@
     "can-order-print": "Tirage d'art",
     "cannot-order-print": "Tirage d'art indisponible",
     "can-download-gpx": "Télécharger le fichier GPX",
-    "cannot-download-gpx": "Fichier GPX indisponible en téléchargement"
+    "cannot-download-gpx": "Fichier GPX indisponible en téléchargement",
+    "feedback.send": "Commenter",
+    "feedback.sending": "Envoi...",
+    "feedback.failed": "Un problème est survenu, veuillez réessayer.",
+    "feedback.text": "Que souhaitez-vous partager ?",
+    "feedback.thank-you": "Merci beaucoup !"
 }
