--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -63,7 +63,7 @@
     "multi-band": "multi-band",
     "multi-gnss": "multi-GNSS",
     "waas-egnos-enabled": "WAAS/EGNOS enabled",
-    "topo-maps": "Topo maps",
+    "topo-maps": "topo maps",
     "map.stats.chart.ele.label": "{{elevation}} (m)",
     "map.stats.chart.ele.tooltip": "{{elevation}}:",
     "map.stats.chart.dist.label": "{{distance}} (km)",
