--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -47,7 +47,8 @@
         "ski": "skiing",
         "snow_shoes": "snowshoeing",
         "wwoof": "wwoofing",
-        "sailing_boat": "sailing"
+        "sailing_boat": "sailing",
+        "ice_climbing": "ice climbing"
     },
     "photo": "Photos",
     "blog": "Blog",
