--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -47,7 +47,8 @@
         "ski": "maastohiihto",
         "snow_shoes": "lumikenkäily",
         "wwoof": "wwoofing",
-        "sailing_boat": "purjehdus"
+        "sailing_boat": "purjehdus",
+        "ice_climbing": "jääkiipeily"
     },
     "photo": "Kuvat",
     "blog": "Blogi",
