--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -47,7 +47,8 @@
         "ski": "ski de rando",
         "snow_shoes": "raquettes à neige",
         "wwoof": "wwoofing",
-        "sailing_boat": "voile"
+        "sailing_boat": "voile",
+        "ice_climbing": "escalade sur glace"
     },
     "photo": "Photos",
     "blog": "Blog",
