more consistent and logical navigation
update doc

update doc

--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -17,12 +17,11 @@
     "download": "Lataa",
     "font": "Fontti",
     "social-networks": "Saat uutisia ja lisätietoja sosiaalisista alustoista sekä muista syötteistä.",
-    "next.tooltip": "Seuraava",
+    "next.tooltip": "Vanhempi valokuva",
     "keystroke": "näppäinpainallus",
-    "rewind.tooltip": "Kelaa taaksepäin",
-    "first.tooltip": "Uusin valokuvaus",
+    "first.tooltip": "Viimeisin valokuva",
     "last.tooltip": "Ensimmäinen valokuvaus",
-    "previous.tooltip": "Edellinen",
+    "previous.tooltip": "Myöhemmin valokuva",
     "loading.tooltip": "Kuormaus",
     "not-found.message": "Sivua, jota yrität tarkastella, ei ole olemassa tai en löytänyt sen sisältöä.",
     "not-found.action": "Käy pääsivulla",
@@ -31,7 +30,8 @@
     "on": ", ",
     "photo.open-story.tooltip": "Lue tarina",
     "photo.open-photo.tooltip": "Tietoja kuvasta",
-    "photo.next.story": "Seuraava seikkailu",
+    "photo.next.story": "Vanhempi seikkailu",
+    "photo.previous.story": "Myöhemmin seikkailu",
     "open-this-story.tooltip": "{{photo.open-story.tooltip}}:",
     "stories": "Seikkailut",
     "stories.title": "Kaikki julkaistut seikkailut",
