--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -17,12 +17,11 @@
     "download": "Télécharger",
     "font": "Police",
     "social-networks": "Je suis également sur les plateformes sociales ainsi que sur d'autres flux d'informations.",
-    "next.tooltip": "Suivant",
+    "next.tooltip": "Photo plus ancienne",
     "keystroke": "touche",
-    "rewind.tooltip": "Rembobiner",
     "first.tooltip": "La plus récente photo",
     "last.tooltip": "La toute première photo",
-    "previous.tooltip": "Précédent",
+    "previous.tooltip": "Photo ultérieure",
     "loading.tooltip": "Chargement",
     "not-found.message": "La page que t'essaies de voir n'existe pas ou je n'ai pas réussi à trouver son contenu.",
     "not-found.action": "Visites la page principale",
@@ -31,7 +30,8 @@
     "on": " le ",
     "photo.open-story.tooltip": "Lire l'aventure",
     "photo.open-photo.tooltip": "À propos de la photo",
-    "photo.next.story": "Aventure suivante",
+    "photo.next.story": "Aventure plus ancienne",
+    "photo.previous.story": "Aventure ultérieure",
     "open-this-story.tooltip": "{{photo.open-story.tooltip}} :",
     "stories": "Aventures",
     "stories.title": "Toutes les aventures publiées",
