--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,12 +17,11 @@
     "download": "Download",
     "font": "Font",
     "social-networks": "Get news and find out more on social platforms as well as other feeds.",
-    "next.tooltip": "Next",
+    "next.tooltip": "Older photo",
     "keystroke": "keystroke",
-    "rewind.tooltip": "Rewind",
-    "first.tooltip": "The newest shot",
-    "last.tooltip": "The very first shot",
-    "previous.tooltip": "Previous",
+    "first.tooltip": "The latest photo",
+    "last.tooltip": "The very first photo",
+    "previous.tooltip": "Later photo",
     "loading.tooltip": "Loading",
     "not-found.message": "The page you try to see does not exist or I failed to find its content.",
     "not-found.action": "Visit the main page",
@@ -31,7 +30,8 @@
     "on": " on ",
     "photo.open-story.tooltip": "Read the story",
     "photo.open-photo.tooltip": "About the photo",
-    "photo.next.story": "Next adventure",
+    "photo.next.story": "Older adventure",
+    "photo.previous.story": "Later adventure",
     "open-this-story.tooltip": "{{photo.open-story.tooltip}}:",
     "stories": "Adventures",
     "stories.title": "All Published Adventures",
