--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -44,6 +44,7 @@
         "all": "kaikki",
         "walk": "vaellus",
         "packraft": "packraftaus",
+        "kayak": "kajakki",
         "ski": "maastohiihto",
         "snow_shoes": "lumikenkäily",
         "wwoof": "wwoofing",
