--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -44,6 +44,7 @@
         "all": "toutes",
         "walk": "rando",
         "packraft": "packrafting",
+        "kayak": "kayak",
         "ski": "ski de rando",
         "snow_shoes": "raquettes à neige",
         "wwoof": "wwoofing",
