--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,6 +44,7 @@
         "all": "all",
         "walk": "hiking",
         "packraft": "packrafting",
+        "kayak": "kayak",
         "ski": "skiing",
         "snow_shoes": "snowshoeing",
         "wwoof": "wwoofing",
