--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,6 +18,9 @@
     "font": "Font",
     "social-networks": "Get news and find out more on social platforms as well as other feeds.",
     "next.tooltip": "Older photo",
+    "transition": "No more photos from this story.",
+    "transition.next": "Go next to see something else.",
+    "transition.prev": "Go previous to see something else.",
     "keystroke": "keystroke",
     "first.tooltip": "The latest photo",
     "last.tooltip": "The very first photo",
