--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -18,6 +18,9 @@
     "font": "Fontti",
     "social-networks": "Saat uutisia ja lisätietoja sosiaalisista alustoista sekä muista syötteistä.",
     "next.tooltip": "Vanhempi valokuva",
+    "transition": "Ei enää kuvia tästä tarinasta.",
+    "transition.next": "Siirry seuraavaan nähdäksesi jotain muuta.",
+    "transition.prev": "Siirry edelliseen nähdäksesi jotain muuta.",
     "keystroke": "näppäinpainallus",
     "first.tooltip": "Viimeisin valokuva",
     "last.tooltip": "Ensimmäinen valokuvaus",
