--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -18,6 +18,9 @@
     "font": "Police",
     "social-networks": "Je suis également sur les plateformes sociales ainsi que sur d'autres flux d'informations.",
     "next.tooltip": "Photo plus ancienne",
+    "transition": "Plus aucune photo de cette histoire.",
+    "transition.next": "Passer à la suite pour voir autre chose.",
+    "transition.prev": "Aller en arrière pour voir autre chose.",
     "keystroke": "touche",
     "first.tooltip": "La plus récente photo",
     "last.tooltip": "La toute première photo",
